force-app/main/default/objects/docutizexa__OrganizationSetting__c/docutizexa__OrganizationSetting__c.object-meta.xml
<CustomObject>
    <label>OrganizationSetting</label>
    <nameField>
        <label>SettingName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrganizationSettings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>