force-app/main/default/objects/docutizexa__OrganizationSetting__c/fields/docutizexa__Organization__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Organization__c</fullName>
    <label>Organization</label>
    <referenceTo>docutizexa__Organization__c</referenceTo>
    <relationshipLabel>OrganizationSettings</relationshipLabel>
    <relationshipName>OrganizationSettings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>