force-app/main/default/objects/docutizexa__OrganizationSetting__c/fields/docutizexa__SettingCode__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__SettingCode__c</fullName>
    <label>SettingCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>