force-app/main/default/objects/docutizexa__OrganizationSetting__c/fields/docutizexa__StartDate__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__StartDate__c</fullName>
    <label>StartDate</label>
    <type>Date</type>
</CustomField>